syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cartobucket.auth.rpc";
option java_outer_classname = "ApplicationProto";

import "google/protobuf/timestamp.proto";


service Applications {
  rpc CreateApplication (ApplicationCreateRequest) returns (ApplicationCreateResponse) {};
  rpc ListApplications (ApplicationListRequest) returns (ApplicationListResponse) {};
  rpc DeleteApplication (ApplicationDeleteRequest) returns (ApplicationResponse) {};
  rpc UpdateApplication (ApplicationUpdateRequest) returns (ApplicationResponse) {};
  rpc GetApplication (ApplicationGetRequest) returns (ApplicationResponse) {};

}

message ApplicationCreateRequest {
  string clientId = 1;
  string name = 2;
  string authorizationServerId = 3;
}

message ApplicationListRequest {
  repeated string authorizationServerIds = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message ApplicationDeleteRequest {
  string id = 1;
}

message ApplicationUpdateRequest {
  string id = 1;
  string name = 2;
}

message ApplicationGetRequest {
  string applicationId = 1;
}

message ApplicationCreateResponse {
  string id = 1;
  string clientId = 2;
  string name = 3;
  string authorizationServerId = 4;
  google.protobuf.Timestamp createdOn = 5;
  google.protobuf.Timestamp updatedOn = 6;
}

message ApplicationResponse {
  string id = 1;
  string clientId = 2;
  string name = 3;
  string authorizationServerId = 4;
  google.protobuf.Timestamp createdOn = 5;
  google.protobuf.Timestamp updatedOn = 6;
}

message ApplicationListResponse {
  repeated ApplicationResponse applications = 1;
  int64 limit = 2;
  int64 offset = 3;
}