syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cartobucket.auth.rpc";
option java_outer_classname = "ApplicationSecretProto";

import "google/protobuf/timestamp.proto";


service ApplicationSecrets {
  rpc CreateApplicationSecret (ApplicationSecretCreateRequest) returns (ApplicationSecretCreateResponse) {};
  rpc ListApplicationSecrets (ApplicationSecretListRequest) returns (ApplicationSecretListResponse) {};
  rpc DeleteApplicationSecret (ApplicationSecretDeleteRequest) returns (ApplicationSecretResponse) {};
}

message ApplicationSecretCreateRequest {
  string applicationId = 1;
  string name = 2;
  string authorizationServerId = 3;
  string scopes = 4;
  google.protobuf.Timestamp createdOn = 5;
}

message ApplicationSecretListRequest {
  string applicationId = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message ApplicationSecretDeleteRequest {
  string id = 1;
  string applicationId = 2;
}

message ApplicationSecretCreateResponse {
  string id = 1;
  string applicationId = 2;
  string name = 3;
  string authorizationServerId = 4;
  string applicationSecret = 5;
  string scopes = 6;
  google.protobuf.Timestamp createdOn = 7;
}

message ApplicationSecretResponse {
  string id = 1;
  string applicationId = 2;
  string name = 3;
  string authorizationServerId = 4;
  string scopes = 6;
  google.protobuf.Timestamp createdOn = 7;
}

message ApplicationSecretListResponse {
  repeated ApplicationSecretResponse applicationSecrets = 1;
  int64 limit = 2;
  int64 offset = 3;
}